[project]
name = "payment-ms"
version = "0.1.0"
description = ""
authors = [
    {name = "thekowalskii",email = "thekovalskii@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "redis-om (>=0.3.5,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
